--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "homepage": "https://github.com/freeride8/iot-power-meter-app-api#readme",
     "dependencies": {
         "body-parser": "1.19.0",
+        "convict": "5.2.0",
         "cors": "2.8.5",
         "express": "4.17.1",
+        "helmet": "3.21.3",
         "lodash": "4.17.15",
-        "ts-node": "8.6.2"
+        "morgan": "1.9.1",
+        "ts-node": "8.6.2",
+        "winston": "3.2.1"
     },
     "devDependencies": {
         "@types/express": "4.17.3",
