--- a/package.json
+++ b/package.json
@@ -21,20 +21,24 @@
     },
     "homepage": "https://github.com/freeride8/iot-power-meter-app-api#readme",
     "dependencies": {
+        "bluebird": "3.7.2",
         "body-parser": "1.19.0",
         "convict": "5.2.0",
         "cors": "2.8.5",
         "express": "4.17.1",
         "helmet": "3.21.3",
         "lodash": "4.17.15",
+        "mongoose": "5.9.4",
         "morgan": "1.9.1",
         "ts-node": "8.6.2",
         "winston": "3.2.1"
     },
     "devDependencies": {
+        "@types/bluebird": "3.5.30",
         "@types/express": "4.17.3",
         "@types/jest": "25.1.4",
         "@types/lodash": "4.14.149",
+        "@types/mongoose": "5.7.6",
         "jest": "25.1.0",
         "nodemon": "2.0.2",
         "ts-jest": "25.2.1",
