--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "convict": "5.2.0",
         "cors": "2.8.5",
         "express": "4.17.1",
+        "express-async-handler": "1.1.4",
         "helmet": "3.21.3",
+        "http-status-codes": "1.4.0",
         "lodash": "4.17.15",
         "mongoose": "5.9.4",
         "morgan": "1.9.1",
