--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "body-parser": "1.19.0",
         "convict": "5.2.0",
         "cors": "2.8.5",
+        "cron": "1.8.2",
         "express": "4.17.1",
         "express-async-handler": "1.1.4",
         "helmet": "3.21.3",
@@ -33,14 +34,17 @@
         "mongoose": "5.9.4",
         "morgan": "1.9.1",
         "ts-node": "8.6.2",
-        "winston": "3.2.1"
+        "winston": "3.2.1",
+        "ws": "7.2.3"
     },
     "devDependencies": {
         "@types/bluebird": "3.5.30",
+        "@types/cron": "1.7.2",
         "@types/express": "4.17.3",
         "@types/jest": "25.1.4",
         "@types/lodash": "4.14.149",
         "@types/mongoose": "5.7.6",
+        "@types/ws": "7.2.2",
         "jest": "25.1.0",
         "nodemon": "2.0.2",
         "ts-jest": "25.2.1",
