--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "http-status-codes": "1.4.0",
         "js-yaml": "3.13.1",
         "lodash": "4.17.15",
+        "moment": "2.24.0",
         "mongoose": "5.9.4",
         "morgan": "1.9.1",
         "ts-node": "8.6.2",
@@ -44,6 +45,7 @@
         "@types/express": "4.17.3",
         "@types/jest": "25.1.4",
         "@types/lodash": "4.14.149",
+        "@types/moment": "2.13.0",
         "@types/mongoose": "5.7.6",
         "@types/ws": "7.2.2",
         "jest": "25.1.0",
