Add nodemon for debugging

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "lint": "tslint -p \"tsconfig.json\" \"./src/**/*.ts\" -t verbose",
         "start:dev": "ts-node -r tsconfig-paths/register src/index.ts",
+        "start:watch": "nodemon",
         "test": "jest"
     },
     "repository": {
