--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     },
     "homepage": "https://github.com/freeride8/iot-power-meter-app-api#readme",
     "dependencies": {
+        "@types/connect-ensure-login": "0.1.5",
+        "bcrypt": "4.0.1",
         "bluebird": "3.7.2",
+        "connect-ensure-login": "0.1.1",
         "convict": "5.2.0",
         "cors": "2.8.5",
         "cron": "1.8.2",
@@ -32,15 +35,21 @@
         "helmet": "3.21.3",
         "http-status-codes": "1.4.0",
         "js-yaml": "3.13.1",
+        "jsonwebtoken": "8.5.1",
+        "jwt-simple": "0.5.6",
         "lodash": "4.17.15",
         "moment": "2.24.0",
         "mongoose": "5.9.4",
         "morgan": "1.9.1",
+        "passport": "0.4.1",
+        "passport-jwt": "4.0.0",
+        "passport-local": "1.0.0",
         "ts-node": "8.6.2",
         "winston": "3.2.1",
         "ws": "7.2.3"
     },
     "devDependencies": {
+        "@types/bcrypt": "3.0.0",
         "@types/bluebird": "3.5.30",
         "@types/cron": "1.7.2",
         "@types/express": "4.17.3",
@@ -48,6 +57,8 @@
         "@types/lodash": "4.14.149",
         "@types/moment": "2.13.0",
         "@types/mongoose": "5.7.6",
+        "@types/passport": "1.0.3",
+        "@types/passport-jwt": "3.0.3",
         "@types/ws": "7.2.2",
         "jest": "25.1.0",
         "nodemon": "2.0.2",
