--- a/package.json
+++ b/package.json
@@ -27,45 +27,46 @@
         "bcrypt": "4.0.1",
         "bluebird": "3.7.2",
         "connect-ensure-login": "0.1.1",
-        "convict": "5.2.0",
+        "convict": "6.0.0",
         "cors": "2.8.5",
         "cron": "1.8.2",
         "express": "4.17.1",
         "express-async-handler": "1.1.4",
-        "helmet": "3.21.3",
+        "helmet": "3.22.0",
         "http-status-codes": "1.4.0",
-        "js-yaml": "3.13.1",
+        "js-yaml": "3.14.0",
         "jsonwebtoken": "8.5.1",
         "jwt-simple": "0.5.6",
         "lodash": "4.17.15",
-        "moment": "2.24.0",
-        "mongoose": "5.9.4",
-        "morgan": "1.9.1",
+        "moment": "2.26.0",
+        "mongoose": "5.9.16",
+        "morgan": "1.10.0",
         "passport": "0.4.1",
         "passport-jwt": "4.0.0",
         "passport-local": "1.0.0",
-        "ts-node": "8.6.2",
+        "ts-node": "8.10.1",
         "winston": "3.2.1",
-        "ws": "7.2.3"
+        "ws": "7.3.0"
     },
     "devDependencies": {
         "@types/bcrypt": "3.0.0",
-        "@types/bluebird": "3.5.30",
+        "@types/bluebird": "3.5.32",
+        "@types/convict": "5.2.1",
         "@types/cron": "1.7.2",
-        "@types/express": "4.17.3",
-        "@types/jest": "25.1.4",
-        "@types/lodash": "4.14.149",
+        "@types/express": "4.17.6",
+        "@types/jest": "25.2.3",
+        "@types/lodash": "4.14.153",
         "@types/moment": "2.13.0",
-        "@types/mongoose": "5.7.6",
+        "@types/mongoose": "5.7.21",
         "@types/passport": "1.0.3",
         "@types/passport-jwt": "3.0.3",
-        "@types/ws": "7.2.2",
-        "jest": "25.1.0",
-        "nodemon": "2.0.2",
-        "ts-jest": "25.2.1",
+        "@types/ws": "7.2.4",
+        "jest": "26.0.1",
+        "nodemon": "2.0.4",
+        "ts-jest": "26.0.0",
         "tsconfig-paths": "3.9.0",
-        "tslint": "6.1.0",
-        "typescript": "3.8.3"
+        "tslint": "6.1.2",
+        "typescript": "3.9.3"
     },
     "jest": {
         "moduleFileExtensions": [
