--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
         "jwt-simple": "0.5.6",
         "lodash": "4.17.15",
         "moment": "2.26.0",
+        "mongodb": "3.5.9",
         "mongoose": "5.9.16",
         "morgan": "1.10.0",
         "passport": "0.4.1",
         "passport-jwt": "4.0.0",
         "passport-local": "1.0.0",
+        "socket.io": "2.3.0",
         "ts-node": "8.10.1",
         "winston": "3.2.1",
         "ws": "7.3.0"
@@ -60,6 +62,7 @@
         "@types/mongoose": "5.7.21",
         "@types/passport": "1.0.3",
         "@types/passport-jwt": "3.0.3",
+        "@types/socket.io": "2.1.8",
         "@types/ws": "7.2.4",
         "jest": "26.0.1",
         "nodemon": "2.0.4",
