feat: trigger sensor updates

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "passport": "0.4.1",
         "passport-jwt": "4.0.0",
         "passport-local": "1.0.0",
+        "request-promise-native": "1.0.8",
         "socket.io": "2.3.0",
         "ts-node": "8.10.1",
         "winston": "3.2.1",
@@ -62,6 +63,7 @@
         "@types/mongoose": "5.7.21",
         "@types/passport": "1.0.3",
         "@types/passport-jwt": "3.0.3",
+        "@types/request-promise-native": "1.0.17",
         "@types/socket.io": "2.1.8",
         "@types/ws": "7.2.4",
         "jest": "26.0.1",
