--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "main": "dist/index.js",
     "scripts": {
+        "build": "rimraf dist && tsc -p tsconfig.build.json && cp -R './src/secrets' './dist/secrets'",
         "lint": "tslint -p \"tsconfig.json\" \"./src/**/*.ts\" -t verbose",
         "start:dev": "ts-node -r tsconfig-paths/register src/index.ts",
         "start:watch": "nodemon",
