--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig.build.json && cp -R './src/secrets' './dist/secrets'",
         "lint": "tslint -p \"tsconfig.json\" \"./src/**/*.ts\" -t verbose",
+        "start": "node dist/index.js",
         "start:dev": "ts-node -r tsconfig-paths/register src/index.ts",
         "start:watch": "nodemon",
         "test": "jest"
@@ -25,7 +26,7 @@
     "homepage": "https://github.com/freeride8/iot-power-meter-app-api#readme",
     "dependencies": {
         "@types/connect-ensure-login": "0.1.5",
-        "bcrypt": "4.0.1",
+        "bcrypt": "5.0.0",
         "bluebird": "3.7.2",
         "connect-ensure-login": "0.1.1",
         "convict": "6.0.0",
@@ -33,7 +34,7 @@
         "cron": "1.8.2",
         "express": "4.17.1",
         "express-async-handler": "1.1.4",
-        "helmet": "3.22.0",
+        "helmet": "3.23.3",
         "http-status-codes": "1.4.0",
         "js-yaml": "3.14.0",
         "jsonwebtoken": "8.5.1",
@@ -46,6 +47,7 @@
         "passport": "0.4.1",
         "passport-jwt": "4.0.0",
         "passport-local": "1.0.0",
+        "request": "^2.88.2",
         "request-promise-native": "1.0.8",
         "socket.io": "2.3.0",
         "ts-node": "8.10.1",
@@ -60,7 +62,6 @@
         "@types/express": "4.17.6",
         "@types/jest": "25.2.3",
         "@types/lodash": "4.14.153",
-        "@types/moment": "2.13.0",
         "@types/mongoose": "5.7.21",
         "@types/passport": "1.0.3",
         "@types/passport-jwt": "3.0.3",
