--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "js-yaml": "3.14.0",
         "jsonwebtoken": "8.5.1",
         "jwt-simple": "0.5.6",
-        "lodash": "4.17.15",
+        "lodash": "^4.17.20",
         "moment": "2.26.0",
         "mongodb": "3.5.9",
         "mongoose": "5.9.16",
